Fix up the styling on the reset button so the text is not clipped and there's some breathing room for it.

--- a/style/invisdemo.css
+++ b/style/invisdemo.css
@@ -42,8 +42,10 @@ form#logiclist {
   position: absolute;
   left: 20px;
   top: 550px;
+  width: 70px;
 }
 
 button#aggregate-reset {
   ws: pre;
+  margin-top: 10px
 }
